<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>
    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>
    <!-- Order Heading [CHAR LIMIT=20] -->
    <string name="order">Order</string>
    <!-- Total and thank you message [CHAR LIMIT=20] -->
    <string name="total_0_nthank_you">Total: ₹ 0\nThank you!</string>
    <!-- Order Summary Heading [CHAR LIMIT=20] -->
    <string name="order_summary">order summary</string>
    <!-- (+) sign [CHAR LIMIT=20] -->
    <string name="plus">+</string>
    <!-- number of coffees [CHAR LIMIT=20] -->
    <string name="number_of_coffeeCup">1</string>
    <!-- (-) sign [CHAR LIMIT=20] -->
    <string name="minus">-</string>
    <!-- Quantity heading [CHAR LIMIT=20] -->
    <string name="quantity">quantity</string>
    <!-- Chocolate word [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>
    <!-- whipped cream word word [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped Cream</string>
    <!-- Topping Heading [CHAR LIMIT=20] -->
    <string name="toppings">toppings</string>
    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!--
      Whipped cream topping for the order summary. It will be shown in the format of
      "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">\nAdd Whipped Cream: <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">\nAdd Chocolate: <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <!--
     Quantity of coffee cups for the order summary. It will be shown in the format of
     "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_quantity">\nQuantity: <xliff:g id="numberOfCoffees " example="2">%d</xliff:g></string>
    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">\nTotal: ₹  <xliff:g id="TotalPrice" example="$10">%d</xliff:g></string>
    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">\nThank you!</string>
    <!-- Problem occurred message when the Intent not work properly. [CHAR LIMIT=NONE] -->
    <string name="problem">Problem Occurred</string>
    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just Java Coffee Order Summary for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!--You cannot have more than 100 coffees message when the number of coffees become less than 1. [CHAR LIMIT=NONE] -->
    <string name="not_more_100">You cannot have more than 100 coffees</string>
    <!--You cannot have less than 1 coffees message when the number of coffees become more than 100. [CHAR LIMIT=NONE] -->
    <string name="not_less_1">You cannot have less than 1 coffees</string>

</resources>